# FinancialAgent

./: .dockerignore  .env.example  .gitignore  .pylintrc  AGENTS.MD  CLAUDE.md  Dockerfile  FinancialExpertAgent.py  MIGRATION_GUIDE.md  Makefile  README.md  SDK_OPTIMIZATIONS.md  UNIFIED_RAG_IMPROVEMENTS.md  analyze_logs.py  debug_events.py  docker-compose.yml  docker-setup.txt  enhanced_agents.py  examples_advanced.py  financial_rag_agent.py  init.sql  main.py  main_refactored.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_agents_sdk.txt  run_financial_agent.sh  setup-instructions.md  setup-local.sh  setup_unified_rag.sh  test_direct_reasoning.py  test_gpt5.py  test_openai.py  test_rag_agent.py  test_reasoning_stream.py  test_refactored.py  todolist.md  todos.md  unified_rag_agent.py
documents/: .keep
exports/: .keep
financial_agent/: advanced_agent.py  agent.py  analysis_agent.py  bootstrap.py  cli.py  context.py  debug_analyzer.py  document_agents.py  enhanced_openai_logger.py  logged_tools.py  logging_utils.py  models.py  openai_analyzer.py  openai_logger.py  orchestrator.py  session_protocol.py  smoke_test.py  validated_tools.py
financial_agent/db/: __init__.py  sql.py
financial_agent/logs/: .gitkeep
financial_agent/specialists/: __init__.py  agent_factory.py  budget_agent.py  debt_agent.py  goal_agent.py  investment_agent.py  tax_agent.py
financial_agent/tools/: advice.py  agent.py  budgets.py  costs.py  excel_ingest.py  export.py  goals.py  ingest.py  memory.py  pdf_ingest.py  query.py  records.py  recurring.py  summarize.py
tests/: test_enhanced_logger_streaming.py  test_gpt5.py  test_streaming_cli.py
uploads/: .keep
