[project]
name = "financial-agent"
version = "0.1.0"
description = "Financial document analysis agent with memory"
authors = [ { name = "You" } ]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
	"openai>=1.40.0",
	"openai-agents>=0.1.0",
	"PyPDF2>=3.0.1",
	"pdfplumber>=0.11.0",
	"pydantic>=2.7.0",
	"pandas>=2.0.0",
	"openpyxl>=3.1.0",
	"xlrd>=2.0.0",
]

[project.scripts]
financial-agent = "financial_agent.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["financial_agent", "financial_agent.tools", "financial_agent.db"]
include-package-data = true

[tool.setuptools.package-data]
"financial_agent.db" = ["finance.db"]

[tool.pytest.ini_options]
# Only collect tests from the dedicated tests/ directory to avoid running
# integration/demo scripts that live at the project root and require
# network access or API keys.
testpaths = ["tests"]
# Be quiet by default; individual runs can override as needed.
addopts = "-q"